INTEGRATION OF SIGNALR TO PRODUCT PAGE
 - Now product page has connection to signalr, implemented connection and its basic configuration.

 - Fixed problem with passing delegate to IQueryable object.

 - Updated several CRUD paths:

 - Now user can get watchlist object by productId. User now can check only its own watchlist.

 - Added snackbar notificator to front-end.
