# src/AuctionApp.Presentation/Common/Requests/CreateUserWatchlistRequest.cs
@@ -1,0 +1,5 @@
+﻿namespace AuctionApp.Presentation.Common.Requests;
+public class CreateUserWatchlistRequest
+{
+    public required int ProductId { get; set; }
+}
